[package]
name = "hack-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
hack-vm = { path = "../hack-vm" }
jack = { path = "../jack" }

[dependencies.hack]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "hack-vm"
path = "fuzz_targets/hack_vm.rs"
test = false
doc = false

[[bin]]
name = "jack"
path = "fuzz_targets/jack.rs"
test = false
doc = false
